--- a/src/app/projekt-navi/projekt-navi.component.html
+++ b/src/app/projekt-navi/projekt-navi.component.html
@@ -55,7 +55,7 @@
               <span><button pButton type="button" class="p-button-text" label="Wiadomości" icon="pi pi-envelope" badge="2" (click)="OpenLink('messages/ReceivedMessages')"></button></span>
             </div>
             <div class="p-col">
-              <button pButton type="button" class="p-button-text" label="Kalendarz" icon="pi pi-calendar-times"></button>
+              <button pButton type="button" class="p-button-text" label="Kalendarz" (click)="OpenLink('personalCalendar')" icon="pi pi-calendar-times"></button>
             </div>
           </div>
         </p-panel>
