--- a/src/app/projekt-navi/project-work/tasks/tasks.component.html
+++ b/src/app/projekt-navi/project-work/tasks/tasks.component.html
@@ -1,1 +1,5 @@
-<p>tasks works!</p>
+<mat-tab-group color="accent">
+  <mat-tab label="To Do"> Content 1 </mat-tab>
+  <mat-tab label="In Progress"> Content 2 </mat-tab>
+  <mat-tab label="Done"> Content 3 </mat-tab>
+</mat-tab-group>
