--- a/src/app/projekt-navi/project-documentation/documentation/documentation.component.html
+++ b/src/app/projekt-navi/project-documentation/documentation/documentation.component.html
@@ -1,1 +1,7 @@
-<p>documentation works!</p>
+<div class="documentation">
+  <p-tree [value]="directories"></p-tree>
+</div>
+
+<div class="detailedFiles">
+  <app-list-files></app-list-files>
+</div>
