--- a/src/app/projekt-navi/project-documentation/documentation/list-files/list-files.component.html
+++ b/src/app/projekt-navi/project-documentation/documentation/list-files/list-files.component.html
@@ -1,10 +1,8 @@
 
 <div class="p-shadow-24">
-  TUTAJ DETALOWANIE PLIKÓW:
   <div>Title:</div>
-  <div>Format:</div>
-  <div>Autor:</div>
-  <div>Załadowane przez:</div>
+  <dix>Data dodania:</dix>
+  <div>Dodano przez:</div>
   <div>Status:</div>
 
 
