--- a/src/app/projekt-navi/projekt-navi.component.html
+++ b/src/app/projekt-navi/projekt-navi.component.html
@@ -27,7 +27,7 @@
 
     <button pButton pRipple type="button" label="Projektowanie" class="p-button-text" (click)="OpenLink('project-work'); setProjectWork()"></button>
     <button pButton pRipple type="button" label="Dokumentacja" class="p-button-text" (click)="OpenLink('project-doc'); setProjectDocumentation()"></button>
-    <button pButton pRipple type="button" label="Harmonogram/terminy" class="p-button-text" (click)="OpenLink('project-schedule'); setProjectSchedule()"></button>
+    <button pButton pRipple type="button" label="Harmonogram" class="p-button-text" (click)="OpenLink('project-schedule'); setProjectSchedule()"></button>
 
 
 
